<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_favorite"
        android:icon="@drawable/ic_favorite"
        android:title="@string/favorite"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_notification"
        android:icon="@drawable/ic_baseline_notifications"
        android:title="@string/notification"
        app:showAsAction="ifRoom" />
</menu>