<resources>
    <string name="app_name">Movie App</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="movie">Movie</string>
    <string name="tv">Tv Series</string>

    <string name="add_to_favorite">Add To Favorite</string>
    <string name="remove_from_favorite">Remove From Favorite</string>
    <string name="favorite">Favorite</string>
    <string name="title_notification">Notification</string>
    <string name="notification">Notification</string>
    <string name="no_data">Empty Data</string>
</resources>
