<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.movie.MovieFragment"
    android:padding="16dp">


    <androidx.recyclerview.widget.RecyclerView
    android:id="@+id/rv_movie"
    tools:listitem="@layout/item_movie_tv"
    android:layout_width="match_parent"
    android:layout_height="match_parent"/>

    <com.facebook.shimmer.ShimmerFrameLayout
        android:id="@+id/progress_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:shimmer_auto_start="true">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <include layout="@layout/item_movie_tv_placeholder" />
                <include layout="@layout/item_movie_tv_placeholder" />
                <include layout="@layout/item_movie_tv_placeholder" />
                <include layout="@layout/item_movie_tv_placeholder" />
                <include layout="@layout/item_movie_tv_placeholder" />
            </LinearLayout>
        </ScrollView>

    </com.facebook.shimmer.ShimmerFrameLayout>



</RelativeLayout>